--- a/auth.html
+++ b/auth.html
@@ -23,7 +23,7 @@
 
         <div>
             <label for="">Şifre</label>
-            <input type="text" id="pass" class="form-control">
+            <input type="password" id="pass" class="form-control">
             <div class="pass-warning">
                 <!-- <p class="warning">Şifre yetersiz!</p> -->
             </div>
